log
ju., 21 de abr. de 2022 11:09:23: 
 tests:  1|8
total_score: 0/70
37572b0
ju., 21 de abr. de 2022 11:09:56: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
042e619
ju., 21 de abr. de 2022 11:10:53: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
2687168
ju., 21 de abr. de 2022 11:27:52: 
 treemap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:93:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree->current;
            ~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
207f9cd
ju., 21 de abr. de 2022 11:30:02: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
0b9d528
